jump fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -11182,7 +11182,7 @@ body {
 }
 
 .contact-section {
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 .contact-section .card {
   border: 0;
